# openwrt-shaper

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
cmd/slqm/: main.go
internal/api/: handler.go  routes.go  websocket.go
internal/config/: config.go  config_test.go
internal/dish/: grpc.go
internal/engine/: billing.go  billing_test.go  bucket.go  bucket_test.go  curve.go  curve_test.go  engine.go
internal/model/: types.go
internal/netctl/: counters.go  devices.go  firewall.go  ifb.go  nftables.go  tc.go
internal/store/: store.go  store_test.go
packaging/: conffiles  control  postinst  prerm
poc-rust/: Cargo.toml
poc-rust/src/: main.rs
scripts/: build.sh  package.sh
src/: config.rs  dish.rs  main.rs  model.rs  store.rs  web.rs
src/api/: handlers.rs  mod.rs  websocket.rs
src/engine/: billing.rs  bucket.rs  curve.rs  mod.rs
src/netctl/: counters.rs  devices.rs  firewall.rs  mod.rs  nftables.rs  tc.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  ErrorBoundary.tsx  api.ts  curvePoints.ts  main.tsx  theme.ts  types.ts  useWebSocket.ts  utils.ts
ui/src/components/: Adjustments.tsx  ConfigDrawer.tsx  CurveChart.tsx  DeviceTable.tsx  QuotaBar.tsx  StatsCards.tsx  ThroughputChart.tsx  WarningBanner.tsx
web/: app.js  embed.go  index.html  style.css
web/assets/: index-B0PEx3Yy.js  index-BB9yUbxK.js  index-BlZqWziW.js  index-DcWdBC6N.js  vendor-B-nNOlek.js  vendor-BD1FtZbp.js  vendor-CbZ-Rou1.js
